// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render with a tooltip when passed a validation hint 1`] = `
.circuit-6 {
  position: relative;
}

.circuit-6:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in,background-color 0.05s ease-in;
  transition: border 0.05s ease-in,background-color 0.05s ease-in;
}

.circuit-2 svg {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  color: #3388FF;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-4 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #212933;
  color: #FFFFFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 31;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  left: 50%;
  left: calc(50% - (16px + 4px));
  bottom: 100%;
  bottom: calc(100% + 12px);
  left: -12px;
}

.circuit-4::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-4::after {
  left: 12px;
}

.circuit-4::after {
  top: 100%;
  border-top-color: #212933;
}

<div
  class=" circuit-6 circuit-7"
>
  <input
    class="circuit-0 circuit-1"
    id="checkbox_5"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-2 circuit-3"
    for="checkbox_5"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 12.79L10 17l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
  <div
    class="circuit-4 circuit-5"
  >
    This field is required.
  </div>
</div>
`;

exports[`Checkbox should render with checked styles when passed the checked prop 1`] = `
.circuit-4 {
  position: relative;
}

.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in,background-color 0.05s ease-in;
  transition: border 0.05s ease-in,background-color 0.05s ease-in;
}

.circuit-2 svg {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  color: #3388FF;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

<div
  class=" circuit-4 circuit-5"
>
  <input
    checked=""
    class="circuit-0 circuit-1"
    id="checkbox_2"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-2 circuit-3"
    for="checkbox_2"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 12.79L10 17l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;

exports[`Checkbox should render with default styles 1`] = `
.circuit-4 {
  position: relative;
}

.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in,background-color 0.05s ease-in;
  transition: border 0.05s ease-in,background-color 0.05s ease-in;
}

.circuit-2 svg {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  color: #3388FF;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

<div
  class=" circuit-4 circuit-5"
>
  <input
    class="circuit-0 circuit-1"
    id="checkbox_1"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-2 circuit-3"
    for="checkbox_1"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 12.79L10 17l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;

exports[`Checkbox should render with disabled styles when passed the disabled prop 1`] = `
.circuit-4 {
  position: relative;
}

.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in,background-color 0.05s ease-in;
  transition: border 0.05s ease-in,background-color 0.05s ease-in;
}

.circuit-2 svg {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  color: #3388FF;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-2::before {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  border-color: #9DA7B1;
  background-color: #FAFBFC;
}

.circuit-2 svg {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  color: #9DA7B1;
}

<div
  class=" circuit-4 circuit-5"
>
  <input
    class="circuit-0 circuit-1"
    disabled=""
    id="checkbox_3"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-2 circuit-3"
    disabled=""
    for="checkbox_3"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 12.79L10 17l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;

exports[`Checkbox should render with invalid styles when passed the invalid prop 1`] = `
.circuit-4 {
  position: relative;
}

.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in,background-color 0.05s ease-in;
  transition: border 0.05s ease-in,background-color 0.05s ease-in;
}

.circuit-2 svg {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  color: #3388FF;
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-2:not(:focus)::before {
  border-color: #DB4D4D;
  background-color: #F4CBCB;
}

.circuit-2:not(:focus) svg {
  color: #DB4D4D;
}

<div
  class=" circuit-4 circuit-5"
>
  <input
    class="circuit-0 circuit-1"
    id="checkbox_4"
    name="name"
    type="checkbox"
    value=""
  />
  <label
    class="circuit-2 circuit-3"
    for="checkbox_4"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 12.79L10 17l8-9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </label>
</div>
`;
